added a preview image

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1db954" />
+    <meta property="og:image" content="%PUBLIC_URL%/exp-preview.jpg" />
     <meta
       name="Explore Spotify"
-      content="Web site created using create-react-app"
+      content="Explore Spotify, get recommendations by your Top Artists & Tracks"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Explore Spotify</title>
   </head>
