--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1db954" />
     <meta property="og:image" content="%PUBLIC_URL%/exp-preview.jpg" />
+    <meta name="twitter:card" content="summary_large_image"></meta>
+    <meta name="twitter:creator" content="@not_orpheus" />
+    <meta property="og:title" content="Explore Spotify" />
+    <meta property="og:description" content="Explore Spotify, get recommendations by your Top Artists & Tracks." />
     <meta
       name="Explore Spotify"
       content="Explore Spotify, get recommendations by your Top Artists & Tracks"
