--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1db954" />
-    <meta property="og:image" content="%PUBLIC_URL%/exp-preview.jpg" />
-    <meta name="twitter:card" content="summary_large_image"></meta>
+    <meta name="twitter:card" content="summary"></meta>
+    <meta name="twitter:site" content="@github" />
     <meta name="twitter:creator" content="@not_orpheus" />
+    <meta name="twitter:image" content="https://mystictide.github.io/explore-spotify/exp-preview.jpg" />
     <meta property="og:title" content="Explore Spotify" />
+    <meta property="og:image" content="%PUBLIC_URL%/exp-preview.jpg" />
     <meta property="og:description" content="Explore Spotify, get recommendations by your Top Artists & Tracks." />
     <meta
       name="Explore Spotify"
